[build-system]
requires = ["hatchling", "click", "python-dotenv"]
build-backend = "hatchling.build"
[project]
name="health-util"
description = "A cli package for providing healthcheck"
version="0.0.1"
authors = [{name="Mogu4iy", email="mogu4iy.kotygoroshko@gmail.com" }]
url="https://github.com/mogu4iy/health-util"
keywords=['health', 'healthcheck', 'cli', 'configuration', 'python']
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities'
]
[project.urls]
"Homepage" = "https://github.com/mogu4iy/health-util"
"Bug Tracker" = "https://github.com/mogu4iy/health-util/issues"